--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,7 +1,3 @@
-body {
-    background-image: linear-gradient(140deg, #340073 -0.39%, #422504 100.04%);
-}
-
 .header {
     max-width: 1280px;
     margin: 0 auto;
@@ -10,34 +6,67 @@ body {
     align-items: center;
     justify-content: space-between;
     background-color:#FFF;
-
-    h1 {
-        color: $new-text-black;
-        font-family: e-Ukraine;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 24px; /* 150% */
-    }
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+    margin-bottom: 10px;
 }
 
-.button__menu{
+.header__title {
+    color: $new-text-black;
+    font-family: e-Ukraine;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 24px; /* 150% */
+}
+
+.header__title.active {
+    display: none;
+}
+
+
+.button__menu {
     outline: none;
     width: 40px;
     height: 40px;
     border: none;
-    padding: 15px 12px;
     margin-right: 8px;
-    justify-content: space-between;
+    align-items:center;
+    justify-content: center;
     background-color: #fff;
     display: flex;
+    position: relative;
     flex-direction: column;
+    box-sizing:border-box;
 
     span {
         display: flex;
         width: 16px;
         height: 2px;
         background-color: rgba(208, 201, 217, 1);
+    }
+
+    &:before {
+        content: "";
+        position: absolute;
+        display: flex;
+        width: 16px;
+        height: 2px;
+        background-color: rgba(208, 201, 217, 1);
+        bottom: 14px;
+    }
+
+    &:after {
+        content: "";
+        position: absolute;
+        display: flex;
+        width: 16px;
+        height: 2px;
+        background-color: rgba(208, 201, 217, 1);
+        top: 14px;
     }
 
     &:hover {
@@ -52,6 +81,20 @@ body {
     &:active {
         opacity: 0.6;
     }
+}
+
+.button__menu.active span {
+    transform: scale(0);
+}
+
+.button__menu.active:before {
+    transform: rotate(-45deg);
+    top: 50%;
+}
+
+.button__menu.active:after {
+    transform: rotate(45deg);
+    top: 50%;
 }
 
 .btn__leng {
@@ -80,6 +123,10 @@ body {
 .header__wrp_right {
     display: none;
     align-items:center;
+}
+
+.header__wrp_right.active {
+    display: flex;
 }
 
 @media (min-width: 640px) {
