--- a/scss/left-block.scss
+++ b/scss/left-block.scss
@@ -8,20 +8,37 @@
     margin: 58px 10px 10px 10px;
 }
 
+.search__title {
+    display: none;
+}
+
 .search {
     appearance: none;
     outline: none;
     width: 100%;
     display: flex;
-    height: 48px;
     align-items: flex-start;
     gap: 8px;
     padding: 12px 48px;
     box-sizing: border-box;
     border-radius: 30px;
     border: 2px solid #E5E5E5;
-    background: url(../img/Search.svg) 16px center no-repeat #FFF;
     margin-bottom: 20px;
+
+    &__wrp {
+        position: relative;
+    
+        &:before {
+            content: "";
+            position: absolute;
+            display: inline-block;
+            background: url(../img/Search.svg);
+            width: 24px;
+            height: 24px;
+            bottom: 12px;
+            left: 16px;
+        } 
+    }
 
     &::placeholder {
         color: #737070;
@@ -34,11 +51,15 @@
 
     &:hover {
         cursor: pointer;
-        border: 2px solid blue;
+        border-radius: 30px;
+        border: 2px solid transparent;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(87deg, #6900E9 9.31%, #E5275F 49.66%, #F68A29 89.49%) border-box;
     }
 
     &:focus {
-        border: 2px solid blue;
+        border-radius: 30px;
+        border: 2px solid transparent;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(87deg, #6900E9 9.31%, #E5275F 49.66%, #F68A29 89.49%) border-box;
     }
 }
 
@@ -63,8 +84,7 @@
     background: #FFF;
     outline: none;
     width: 100%;
-    height: 48px;
-    padding: 12px 40px 12px 16px;
+    padding: 12px 12px 12px 16px;
     cursor: pointer;
     box-sizing:border-box;
     color: var(--new-text-black, #333);
@@ -74,13 +94,20 @@
     font-weight: 400;
     line-height: 24px; /* 150% */;
 
-    &:hover {
-        border: 2px solid blue;
-    }
-
+    &:hover,
     &:focus {
-        border: 2px solid blue;
+        border-radius: 30px;
+        border: 2px solid transparent;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(87deg, #6900E9 9.31%, #E5275F 49.66%, #F68A29 89.49%) border-box;
     }
+}
+
+.dash {
+    display: none;
+}
+
+.date::-webkit-calendar-picker-indicator {
+    display: none;
 }
 
 .select_wrp {
@@ -89,7 +116,7 @@
     &:after {
         content: url("../img/arrow down.svg");
         position: absolute;
-        top: 12px;
+        top: 15px;
         right: 16px;
         width: 24px;
         height: 24px;
@@ -105,7 +132,7 @@
         content: "from";
         position: absolute;
         left: 16px;
-        top: 12px;
+        top: 15px;
         color:rgba(52, 0, 115, 0.50);
         font-family: e-Ukraine;
         font-size: 14px;
@@ -137,29 +164,27 @@
     }
 }
 
-.select-interval {
+.select-text {
+    text-align: center;
+    color: #333;
+    font-family: e-Ukraine;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 153.846% */
+    margin-bottom: 12px;
 
-    p {
-        text-align: center;
-        color: #333;
+    span {
+        color: #340073;
         font-family: e-Ukraine;
-        font-size: 13px;
+        font-size: 14px;
         font-style: normal;
         font-weight: 400;
-        line-height: 20px; /* 153.846% */
-        margin-bottom: 12px;
-
-        span {
-            color: #340073;
-            font-family: e-Ukraine;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 20px; /* 142.857% */
-            text-decoration-line: underline;
-        }
+        line-height: 20px; /* 142.857% */
+        text-decoration-line: underline;
     }
 }
+
 
 .interval {
     &::placeholder {
@@ -189,6 +214,13 @@
     font-weight: 400;
     line-height: 20px; /* 142.857% */
     text-decoration-line: underline;
+    outline: none;
+
+    &:hover,
+    &:focus {
+        border: 2px solid transparent;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(87deg, #6900E9 9.31%, #E5275F 49.66%, #F68A29 89.49%) border-box;
+    }
 }
 
 .filter__btn__hide {
@@ -289,14 +321,187 @@
 
     &:hover {
         cursor: pointer;
-        text-decoration-line: underline;
+        border: 2px solid transparent;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(87deg, #6900E9 9.31%, #E5275F 49.66%, #F68A29 89.49%) border-box;
     }
 
     &:focus {
-        text-decoration-line: underline;
+        border: 2px solid transparent;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(87deg, #6900E9 9.31%, #E5275F 49.66%, #F68A29 89.49%) border-box;
     }
 
     &:active {
         opacity: 0.7;
+    }
+}
+
+@media (min-width: 360px) {
+    .left-block {
+        padding: 20px 20px 40px 20px;
+    }
+}
+
+@media (min-width: 640px) {
+    .left-block {
+        padding: 20px;
+        margin: 68px 20px 20px 20px;
+    }
+
+    .search{
+        margin-bottom: 24px;
+
+        &__title {
+            display: block;
+            color: var(--new-text-black, #333);
+            font-family: e-Ukraine;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 16px; /* 133.333% */
+            text-transform: uppercase;
+            margin-bottom: 24px;
+        }   
+    }
+
+    .select-marg {
+        margin-bottom: 24px;
+    }
+
+    .select-interval {
+        p {
+            text-align: start;
+            color: var(--new-text-grey, #737070);
+            font-family: e-Ukraine;
+            font-size: 13px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 20px; /* 153.846% */
+    
+            span {
+                color: #340073;
+                font-family: e-Ukraine;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 20px; /* 142.857% */
+                text-decoration-line: underline;
+            }
+        }
+    }
+
+    .select__items {
+        display: flex;
+    }
+
+
+    .select__up {
+        width: 100%;
+        margin: 0;
+    }
+
+    .select__down {
+        width: 100%;
+        margin: 0;
+    }
+
+    .dash {
+        display: flex;
+        align-self: center;
+        color: var(--new-text-grey, #737070);
+        font-family: e-Ukraine;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px; /* 150% */
+        margin: 0 10px;
+    }
+
+    .filter {
+        display: none;
+    }
+
+    .apply-wrp {
+        display: flex;
+    }
+
+    .apply {
+        width: 248px;
+        margin: 0 40px 0 0;
+    }
+}
+
+@media (min-width: 800px) {
+    .left-block {
+        margin: 0 0 20px;
+        overflow: auto;
+        flex: 1;
+
+        &__wrp {
+            width: 31%;
+            margin-right: 20px;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    .search {
+        margin-bottom: 20px;
+
+        &__title {
+            margin-bottom: 20px;
+        }
+    }
+
+    .select__up {
+        margin-bottom: 12px;
+    }
+
+
+    .select__items {
+        display: block;
+    }
+
+    .dash {
+        display: none;
+    }
+
+    .apply {
+        width: 100%;
+        margin-bottom: 20px;
+
+        &-wrp {
+            display: block;
+        }
+    }
+
+    .reset-wrp {
+        margin-bottom: 20px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .left-block__wrp{
+        width: 40%;
+    }
+
+    .select__items {
+        display: flex;
+    }
+
+    .dash {
+        display: block;
+    }
+
+    .apply-wrp {
+        display: flex;
+    }
+
+    .apply {
+        width: 248px;
+    }
+
+    .select__up {
+        margin: 0;
     }
 }
