--- a/scss/simulator.scss
+++ b/scss/simulator.scss
@@ -3,14 +3,25 @@
     flex-direction: column;
     align-items: center;
     padding: 192px 15px;
-    margin: 10px;
     border-radius: 16px;
     background: #F9F8FA;
-    position: fixed;
-    top: -100%;
-    transition: all 0.5s;
+    width: 100%;
 
-    .simulator__title {
+
+    &__wrp {
+        background: linear-gradient(140deg, #340073 -0.39%, #422504 100.04%);
+        top: -100%;
+        width: 100%;
+        transition: all 0.5s;
+        position: absolute;
+        left: 0;
+        padding: 10px;
+        height: calc(100vh - 48px);
+        display: flex;
+        box-sizing:border-box;
+    }
+
+    &__title {
         color: var(--new-text-black, #333);
         text-align: center;
         font-family: e-Ukraine;
@@ -19,8 +30,8 @@
         font-weight: 300;
         line-height: 20px; /* 166.667% */
         margin-bottom: 20px;
-
     }
+
     .blue__button {
         display: flex;
         padding: 16px 24px;
@@ -37,9 +48,61 @@
         font-weight: 700;
         line-height: 16px; /* 114.286% */
         text-transform: uppercase;
+
+        &:hover,
+        &:focus {
+            border: 2px solid transparent;
+            background: linear-gradient(#fff, #fff) padding-box, linear-gradient(87deg, #6900E9 9.31%, #E5275F 49.66%, #F68A29 89.49%) border-box;
+        }
     }
 }
 
-.simulator.active {
+.simulator__wrp.active {
     top: 48px;
+}
+
+@media (min-width: 640px) {
+    .simulator__wrp {
+        position: static;
+        height: 100%;
+        padding: 0 20px 20px;
+    }
+
+    .simulator {
+        padding: 16px;
+        align-items: start;
+
+        &__title {
+            margin-bottom: 12px;
+        }
+
+        .blue__button {
+        font-size: 12px;
+        padding: 6px 12px;
+        }
+    }
+}
+
+@media (min-width: 800px) {
+    .simulator {
+        padding: 16px;
+
+        &__wrp {
+            padding: 0;
+            display: block;
+            height: auto;
+        }
+
+        &__title {
+            color: var(--new-text-black, #333);
+            text-align: start;
+            font-family: e-Ukraine;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 20px; /* 166.667% */
+            margin-bottom: 8px;
+            padding-right: 15px;
+        }
+    }
 }
